SERVER-62178 Clear filtering metadata on recipient shard primary for temporary resharding collection after creation

(cherry picked from commit e9d49578b3e11044e0e41bdcbb72f41cd17e571c)